tdf#88999 Modify number of decimal for scientific also (UI and Sidebar)

Scientific format was excluded from being able to increase/decrease
number of decimals, red for negative or thousand separator in UI Format >
Cells > Numbers and Sidebar > Number Format

Change-Id: I56b175a26fc5ba46b9964390f9c098d5d93c73dc
Reviewed-on: https://gerrit.libreoffice.org/14293
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>